# sokol_text_rendering

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  freetype_scu.c  shaders.bat  shaders.sh
src/: common.h  gui.c  platform_osx.m  platform_win.c  plugin.c  plugin.h  text_rendering_layer.c  text_rendering_layer.h
src/libs/: freetype_scu.c  freetype_scu_modules.h  freetype_scu_options.h  kb_text_shape.c  kb_text_shape.h  stb_rect_pack.h
src/shaders/: img.glsl  text.glsl
